[gd_scene load_steps=5 format=3 uid="uid://bdnfsjf6ycr6s"]

[ext_resource type="Script" uid="uid://clq84y72eypr0" path="res://scripts/egg_final_box.gd" id="1_o7mvl"]
[ext_resource type="Texture2D" uid="uid://cer6ymm8io5ww" path="res://assets/pixil-frame-0 8-Photoroom.png" id="3_2q1ha"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o7mvl"]
size = Vector2(434, 295)

[sub_resource type="Gradient" id="Gradient_o7mvl"]
colors = PackedColorArray(1, 0, 0, 1, 0, 0.996078, 0, 1)

[node name="egg_final_box" type="Area2D"]
script = ExtResource("1_o7mvl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(31, -44.5)
shape = SubResource("RectangleShape2D_o7mvl")

[node name="Pixil-frame-08-photoroom" type="Sprite2D" parent="."]
position = Vector2(30, -12)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_2q1ha")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 500.0
scale_amount_min = 7.5
scale_amount_max = 10.0
color_ramp = SubResource("Gradient_o7mvl")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 500.0
scale_amount_min = 7.5
scale_amount_max = 10.0
color_ramp = SubResource("Gradient_o7mvl")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
